--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/router": "~10.0.6",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
