--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "@angular/animations": "~10.0.6",
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
+    "@angular/compiler-cli": "10.0.11",
     "@angular/core": "~10.0.6",
     "@angular/forms": "~10.0.6",
+    "@angular/localize": "10.0.11",
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "rxjs": "~6.5.5",
+    "tslib": "^2.0.0",
+    "typescript": ">=3.9 <4.0",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
