--- a/package.json
+++ b/package.json
@@ -11,26 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.6",
-    "@angular/common": "~10.0.6",
-    "@angular/compiler": "~10.0.6",
-    "@angular/compiler-cli": "10.0.11",
-    "@angular/core": "~10.0.6",
-    "@angular/forms": "~10.0.6",
-    "@angular/localize": "10.0.11",
-    "@angular/platform-browser": "~10.0.6",
-    "@angular/platform-browser-dynamic": "~10.0.6",
-    "@angular/router": "~10.0.6",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@angular/animations": "10.0.14",
+    "@angular/cdk": "10.2.0",
+    "@angular/common": "10.0.14",
+    "@angular/compiler": "10.0.14",
+    "@angular/compiler-cli": "10.1.0",
+    "@angular/core": "10.0.14",
+    "@angular/forms": "10.0.14",
+    "@angular/localize": "^10.1.0",
+    "@angular/material": "10.2.0",
+    "@angular/platform-browser": "10.0.14",
+    "@angular/platform-browser-dynamic": "10.0.14",
+    "@angular/router": "10.0.14",
     "bootstrap": "^4.5.2",
-    "jquery": "^3.5.1",
+    "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.1",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "typescript": ">=3.9 <4.0",
-    "zone.js": "~0.10.3",
-    "@angular/material": "^10.0.0",
-    "@angular/cdk": "^10.0.0"
+    "rxjs": "6.5.5",
+    "tslib": "2.0.1",
+    "typescript": ">=3.9 <4.1",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
