--- a/package.json
+++ b/package.json
@@ -18,20 +18,24 @@
     "@angular/compiler-cli": "10.1.0",
     "@angular/core": "10.0.14",
     "@angular/forms": "10.0.14",
-    "@angular/localize": "^10.1.0",
+    "@angular/localize": "10.1.0",
     "@angular/material": "10.2.0",
     "@angular/platform-browser": "10.0.14",
     "@angular/platform-browser-dynamic": "10.0.14",
     "@angular/router": "10.0.14",
-    "bootstrap": "^4.5.2",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.16.1",
-    "rxjs": "6.5.5",
-    "tslib": "2.0.1",
-    "typescript": ">=3.9 <4.1",
-    "zone.js": "0.10.3",
+    "@ngrx/effects": "10.0.0",
     "@ngrx/store": "10.0.0",
-    "@ngrx/effects": "10.0.0"
+    "@ngrx/store-devtools": "10.0.0",
+    "bootstrap": "4.5.2",
+    "jquery": "3.5.1",
+    "ngrx-store-freeze": "0.2.4",
+    "ngrx-store-logger": "0.2.4",
+    "popper.js": "1.16.1",
+    "rxjs": "6.5.5",
+    "src": "^1.1.2",
+    "tslib": "2.0.1",
+    "typescript": "4.0.2",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
