--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/router": "~10.0.6",
     "@ngrx/effects": "10.0.0",
     "@ngrx/store": "10.0.0",
+    "bootstrap": "4.5.2",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
