--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@angular/cdk": "10.2.0",
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
+    "@angular/compiler-cli": "10.1.0",
     "@angular/core": "~10.0.6",
     "@angular/forms": "~10.0.6",
+    "@angular/localize": "10.1.0",
     "@angular/material": "10.2.0",
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
@@ -28,6 +30,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "typescript": ">=3.9 <4.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
